Lexing/test_cases/bad/illegal-5.cl
(* a string of simple illegals *)
&^

